--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
     "cors": "^2.8.5",
     "express": "^5.1.0",
     "mongodb": "^7.0.0",
+    "mongoose": "^8.20.1",
     "openai": "^6.9.1",
     "ws": "^8.18.3"
   }
